Fix spacing between form elements

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ img[alt="Odin-logo"] {
     font-family: var(--default-font);
     font-size: 2em;
     padding-top: 30px;
+    margin-bottom: 30px;
 }
 
 .fieldset {
@@ -102,6 +103,7 @@ img[alt="Odin-logo"] {
 input {
     width: 300px;
     height: 30px;
+   
 }
 
 p {
@@ -110,6 +112,7 @@ p {
 
 span {
     width: 300px;
+    margin-bottom: 20px;
 }
 span:nth-child(odd) {
     margin-left: -90px;
